# face_detection_tflite

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  pubspec.yaml  runAllTests.sh  runBenchmark.sh  runWebBenchmark.sh
.github/workflows/: build.yml  integration.yml
android/app/: build.gradle.kts
example/: .gitignore  README.md  pubspec.yaml  run_integration_tests.sh  run_integration_tests_windows.ps1
example/android/app/: build.gradle.kts
example/integration_test/: accelerator_control_test.dart  all_model_variants_test.dart  assertion_gaps_test.dart  benchmark_test.dart  cm_all_models_test.dart  cm_component_bench_test.dart  cm_detection_models_bench_test.dart  cm_embedding_segmentation_test.dart  cm_inference_only_test.dart  cm_stress_test.dart  combined_segmentation_test.dart  compiledmodel_ab_test.dart  concurrency_stress_test.dart  coverage_gaps_test.dart  edge_cases_test.dart  embedding_demo_test.dart  embedding_match_test.dart  error_recovery_test.dart  face_detection_integration_test.dart  face_detector_web_benchmark_test.dart  face_gpu_vs_xnnpack_test.dart  face_singleface_gpu_test.dart  full_pipeline_breakdown_test.dart  fullsparse_gpu_probe_test.dart  glue_micro_bench_test.dart  gpu_delegate_test.dart  helpers_unit_test.dart  image_utils_test.dart  isolate_mat_debug_test.dart  litert_util_bench_test.dart  micro_opt_bench_test.dart  mlkit_benchmark_compiled_test.dart  mlkit_benchmark_test.dart  opencv_helpers_test.dart  performance_config_test.dart  pipeline_stage_attribution_test.dart  preprocessing_equivalence_test.dart  release_model_loader_test.dart  seg_gpu_vs_xnnpack_test.dart  selfie_segmentation_test.dart  (+1 more)
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  test_page.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist  (+1 more)
example/test/: home_screen_overflow_test.dart  video_result_overflow_test.dart
example/test_driver/: integration_test.dart
example/tool/: make_embedding_demo.py
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example_web/: pubspec.yaml
example_web/lib/: detection_overlay.dart  live_camera_screen.dart  main.dart  segmentation_rendering.dart  still_image_screen.dart  video_file_screen.dart
example_web/web/: index.html
ios/: face_detection_tflite.podspec
ios/Classes/: FaceDetectionTflitePlugin.swift
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/face_detection_tflite/: Package.swift
lib/: face_detection_tflite.dart  face_detection_tflite_native.dart  face_detection_web.dart  face_detector_flutter.dart
lib/src/: anchors.dart  crop.dart  dart_registration.dart  detection_types.dart  face_core.dart  face_detection.dart  face_detection_model.dart  face_detector.dart  face_detector_isolate.dart  face_embedding.dart  face_landmark.dart  geometry.dart  helpers.dart  image_processing_worker.dart  image_utils.dart  iris_landmark.dart  isolate_worker.dart  models.dart  nms.dart  preprocess.dart  segmentation_worker.dart  selfie_segmentation.dart  types_and_consts.dart
linux/: CMakeLists.txt  face_detection_tflite_plugin.cc
linux/runner/: my_application.cc
linux/test/: face_detection_tflite_plugin_test.cc
macos/: face_detection_tflite.podspec
macos/Classes/: FaceDetectionTflitePlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/face_detection_tflite/: Package.swift
test/: dart_registration_test.dart  face_detection_model_test.dart  face_detector_coverage_test.dart  face_detector_isolate_test.dart  face_detector_test.dart  face_embedding_test.dart  helpers_coverage_test.dart  helpers_image_ops_test.dart  helpers_private_test.dart  helpers_pure_dart_test.dart  image_utils_test.dart  iris_parsing_test.dart  isolate_worker_test.dart  private_wrappers_test.dart  segmentation_worker_test.dart  selfie_segmentation_test.dart  test_config.dart  types_and_consts_test.dart  types_coverage_test.dart  widget_test.dart
test/unit/: face_detector_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  face_detection_tflite_plugin.cpp  face_detection_tflite_plugin.h  face_detection_tflite_plugin_c_api.cpp  registration.cpp
windows/include/face_detection_tflite/: face_detection_tflite_plugin.h  face_detection_tflite_plugin_c_api.h
windows/runner/: Runner.rc  main.cpp
windows/test/: face_detection_tflite_plugin_test.cpp
(+49 files in other folders)
